<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/relativeLayout">
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="Contact Us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="click7"
            app:srcCompat="?attr/actionModeCloseDrawable" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginStart="13dp"
        android:layout_marginTop="29dp"
        android:text="@string/name5"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView20"
        android:layout_marginTop="13dp"
        android:padding="15dp"
        android:text="@string/name6"
        android:textColor="@color/white"
        android:textSize="27dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView20"
        android:layout_below="@+id/textView21"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView12"
        android:layout_below="@+id/imageView12"
        android:layout_marginTop="90dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView13"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/imageView12"
        android:text="Give us a ring"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView13"
        android:layout_alignStart="@+id/textView22"
        android:text="Email us at"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_below="@+id/textView22"
        android:layout_marginTop="12dp"
        android:text="@string/name7"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView23"
        android:layout_below="@+id/textView23"
        android:layout_marginTop="12dp"
        android:text="@string/name9"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView24"
        android:layout_below="@+id/textView24"
        android:text="@string/name8"
        android:textColor="@color/white"
        android:textSize="20dp" />

</RelativeLayout>