<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="Description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40dp"
            android:id="@+id/textView17" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            android:onClick="click5"
            android:layout_toStartOf="@+id/textView17"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="360dp"
        android:layout_height="180dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="click1"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="360dp"
        android:layout_height="180dp"
        android:layout_alignStart="@+id/imageView9"
        android:layout_below="@+id/imageView9"
        android:layout_marginTop="13dp"
        android:onClick="click2"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="360dp"
        android:layout_height="190dp"
        android:layout_alignStart="@+id/imageView10"
        android:layout_below="@+id/imageView10"
        android:layout_marginTop="11dp"
        android:onClick="click3"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/name1"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/name2"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/name3"
        android:textColor="@color/white"
        android:textSize="24dp" />

</RelativeLayout>
